@@ -6,14 +6,16 @@ import ru.cwcode.commands.api.Sender;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static ru.cwcode.commands.api.CommandsAPI.l10n;
+
 public class TimeArg extends Argument {
-  static List<AbstractMap.SimpleEntry<String, List<String>>> completions = new ArrayList<>() {{
-    add(new AbstractMap.SimpleEntry<>("", Arrays.asList("0", "1", "2")));
-    add(new AbstractMap.SimpleEntry<>("^[0-2:]", Arrays.asList("0", "1", "2", "3", "4", "5", "6", "7", "8", "9")));
-    add(new AbstractMap.SimpleEntry<>("^(([0,1][0-9])|(2[0-3]))", List.of(":")));
-    add(new AbstractMap.SimpleEntry<>("^(([0,1][0-9])|(2[0-3])):", Arrays.asList("0", "1", "2", "3", "4", "5")));
-    add(new AbstractMap.SimpleEntry<>("^(([0,1][0-9])|(2[0-3])):[0-5]", Arrays.asList("0", "1", "2", "3", "4", "5", "6", "7", "8", "9")));
-  }};
+  static List<AbstractMap.SimpleEntry<String, List<String>>> completions = List.of(
+    new AbstractMap.SimpleEntry<>("", List.of("0", "1", "2")),
+    new AbstractMap.SimpleEntry<>("^[0-2:]", List.of("0", "1", "2", "3", "4", "5", "6", "7", "8", "9")),
+    new AbstractMap.SimpleEntry<>("^(([0,1][0-9])|(2[0-3]))", List.of(":")),
+    new AbstractMap.SimpleEntry<>("^(([0,1][0-9])|(2[0-3])):", List.of("0", "1", "2", "3", "4", "5")),
+    new AbstractMap.SimpleEntry<>("^(([0,1][0-9])|(2[0-3])):[0-5]", List.of("0", "1", "2", "3", "4", "5", "6", "7", "8", "9"))
+  );
   
   @Override
   public boolean valid(String raw) {
@@ -37,11 +39,11 @@ public class TimeArg extends Argument {
   
   @Override
   public String argumentName() {
-    return "время";
+    return l10n.get("argument.time.name");
   }
   
   @Override
   public String hint() {
-    return "Часы:минуты";
+    return l10n.get("argument.time.hint");
   }
 }
